--- a/src/Components/about/AboutStyle.css
+++ b/src/Components/about/AboutStyle.css
@@ -206,10 +206,49 @@ i.fa-react {
     min-width: 100px;
   }
 }
+@media screen and (max-width: 600px) {
+ #About {
+  padding: 25px;
+ }
+  #About .Heading {
+    font-size: 2.5rem;
+  }
+  #About .container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  #About .About-me-content {
+    width: 95%;
+    text-align: center;
+  }
+  #About .About-me-content .section div {
+    width: 100%;
+    padding: 0;
+  }
+  #About .About-me-content .section p {
+    font-size: 1rem;
+  }
+  #About .About-me-content .section .boldy {
+    font-size: 1.2rem;
+  }
 
+  .stack {
+    margin: 15px;
+    font-size: 1.2rem;
+    flex-direction: column;
+    font-weight: 800;
+  }
+  .cv-btn {
+    min-width: 150px;
+    font-size: 1rem;
+  }
+}
 @media screen and (max-width: 426px) {
   #About {
-    width: 85%;
+    width: 95%;
   }
   #About .Heading {
     font-size: 2rem;
