--- a/src/Components/landing/LandingStyle.css
+++ b/src/Components/landing/LandingStyle.css
@@ -121,7 +121,7 @@
 @media screen and (max-width: 1200px) {
   .landing,
   .box-section {
-    width: 90%;
+    width: 75%;
     padding: 60px 15px;
   }
   .Text {
@@ -155,6 +155,8 @@
   .Text {
     width: 100%;
     text-align: center;
+    align-items: center;
+    
   }
   .Text .name {
     text-align: center;
