--- a/src/Components/about/AboutStyle.css
+++ b/src/Components/about/AboutStyle.css
@@ -1,18 +1,11 @@
 #About {
-  border: 5px solid var(--border-color);
-  margin-bottom: var(--spacing-2xl);
-  padding: var(--spacing-2xl);
-  width: 75%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
-   transition: all 0.4s linear;
+  align-items: center;
  }
 
- #About:hover {
-   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
- }
+
  
 #About .container {
   display: flex;
